--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <title>กรธ.60 - Data Query</title>
 <meta name="description" content="หน้าจอดึงข้อมูลกรธ.60" />
-<link href="main.css?v=0.0.2" rel="stylesheet" />
+<link href="main.css?v=0.0.3" rel="stylesheet" />
 </head>
 <body>
 
@@ -13,15 +13,17 @@
   </header>
   <section id="app-section">
     <h3>Query Editor</h3>
-    <p>Sample query - [ <a id="query-main" href="#main">รธน.60</a> | <a id="query-draft" href="#draft">กรธ.60</a> ]</p>
-<textarea id="query-editor">
-$dataObj = createDataObject($column.main, $data.main);
-
-$dataObj
-  .setColumn('บทบัญญัติ')
-  .search('พระบรมราชโองการ ประชุมลับ งบประมาณ')
-  .render($dataSection);
-</textarea>
+    <p>
+      Sample query - [
+      <a id="query-main" href="#main">รธน.60</a> |
+      <a id="query-draft" href="#draft">กรธ.60</a> ]
+    </p>
+    <textarea id="query-editor">createDataObject(column.main, data.main)
+  .render(
+    'data-section',
+    { id: 'data-table', border: 1 }
+  );
+  </textarea>
     <textarea id="query-result"></textarea>
     <button id="query-submit">Query</button>
   </section>
@@ -31,9 +33,12 @@ $dataObj
   </aside>
 </main>
 
-<script type="module" src="data.js?v=0.0.2"></script>
-<script type="module" src="data-object.js?v=0.0.2"></script>
-<script type="module" src="app.js?v=0.0.2"></script>
+<!-- Only use during development, will be removed later. -->
+<script src="array-log.js"></script>
+
+<script type="module" src="data.js?v=0.0.3"></script>
+<script type="module" src="data-object.js?v=0.0.3"></script>
+<script type="module" src="app.js?v=0.0.3"></script>
 
 </body>
 </html>
