--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <meta charset="utf-8" />
 <title>กรธ.60 - Data Query</title>
 <meta name="description" content="หน้าจอดึงข้อมูลกรธ.60" />
-<link href="main.css?v=0.1.0" rel="stylesheet" />
+<link href="/main.css?v=0.2.0" rel="stylesheet" />
+
+<!-- Data download need prefetch as all JSON size sum will exceeded 10mb -->
+<link rel="prefetch" href="./data/chapter-01.json?v=0.2.0" />
+<link rel="prefetch" href="./data/transitory-provisions.json?v=0.2.0" />
+<link rel="prefetch" href="./data/constitution.json?v=0.2.0" />
+<link rel="prefetch" href="./data/minutes.json?v=0.2.0" />
+
 </head>
 <body>
 
@@ -12,9 +19,9 @@
     <h1>กรธ.60 - Data Query</h1>
   </header>
   <section id="app-section">
-    <h3>Query Editor</h3>
+    <h3>Sample Queries</h3>
     <p>
-      Sample query - [
+      Basic - [
           <a id="query-filter" class="query-sample" href="#filter">Filter</a> 
         | <a id="query-filterOut" class="query-sample" href="#filterOut">Filter Out</a> 
         | <a id="query-filterArray" class="query-sample" href="#filterArray">Filter Array</a> 
@@ -26,7 +33,12 @@
         | <a id="query-log" class="query-sample" href="#log">Log (For dev usage)</a>
       ]
     </p>
-    <textarea id="query-editor">createDataObject(data.con)
+    <p>
+      Use Cases - [
+          <a id="query-something" class="query-sample" href="#something">Something</a>
+      ]
+    </p>
+    <textarea id="query-editor">createDataObject(data.doc)
   .render(
     'data-section',
     { id: 'data-table', border: 1 }
@@ -42,10 +54,8 @@
   </nav>
 </main>
 
-<script src="array-log.js?v=0.1.0"></script>
-<script type="module" src="data.js?v=0.1.0"></script>
-<script type="module" src="data-object.js?v=0.1.0"></script>
-<script type="module" src="app.js?v=0.1.0"></script>
+<script src="./array-log.js?v=0.2.0"></script>
+<script type="module" src="./app.js?v=0.2.0"></script>
 
 </body>
 </html>
