--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <title>กรธ.60 - Data Query</title>
 <meta name="description" content="หน้าจอดึงข้อมูลกรธ.60" />
-<link href="/main.css?v=0.2.0" rel="stylesheet" />
+<link href="./main.css?v=0.2.0" rel="stylesheet" />
 
 <!-- Data download need prefetch as all JSON size sum will exceeded 10mb -->
 <link rel="prefetch" href="./data/chapter-01.json?v=0.2.0" />
