--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
       ]
     </p>
     <p>
-      Use Cases - [
-          <a id="query-something" class="query-sample" href="#something">Something</a>
-      ]
+      Use Cases - TODO: will be implemented later.
     </p>
     <textarea id="query-editor">createDataObject(data.doc)
   .render(
