--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
     <h3>Sample Queries</h3>
     <p>
       Data object functions - [
-          <a id="query-filter" class="query-sample" href="#filter">Filter</a> 
-        | <a id="query-filterOut" class="query-sample" href="#filterOut">Filter Out</a> 
-        | <a id="query-filterArray" class="query-sample" href="#filterArray">Filter Array</a> 
-        | <a id="query-search" class="query-sample" href="#search">Search</a> 
-        | <a id="query-sort" class="query-sample" href="#sort">Sort</a>
-        | <a id="query-reverse" class="query-sample" href="#reverse">Reverse</a>
-        | <a id="query-append" class="query-sample" href="#append">Append</a>
-        | <a id="query-prepend" class="query-sample" href="#prepend">Prepend</a>
+          <a id="query-filter" class="query-sample" href="#filter">filter</a> 
+        | <a id="query-filters" class="query-sample" href="#filters">filters</a> 
+        | <a id="query-filterOut" class="query-sample" href="#filterOut">filterOut</a> 
+        | <a id="query-filterArray" class="query-sample" href="#filterArray">filterArray</a> 
+        | <a id="query-search" class="query-sample" href="#search">search</a> 
+        | <a id="query-sort" class="query-sample" href="#sort">sort</a>
+        | <a id="query-reverse" class="query-sample" href="#reverse">reverse</a>
+        | <a id="query-append" class="query-sample" href="#append">append</a>
+        | <a id="query-prepend" class="query-sample" href="#prepend">prepend</a>
       ]
     </p>
     <p>
-      Utility functions - [
-          <a id="query-constitution" class="query-sample" href="#constitution">getConstitution</a>
-        | <a id="query-minutes" class="query-sample" href="#minutes">getMinutes</a>
-        | <a id="query-log" class="query-sample" href="#log">Log (For dev usage)</a>
+      UI &amp; Utility functions - [
+          <a id="query-getConstitution" class="query-sample" href="#getConstitution">getConstitution</a>
+        | <a id="query-getMinutes" class="query-sample" href="#getMinutes">getMinutes</a>
+        | <a id="query-list1" class="query-sample" href="#list1">list (หมวด)</a>
+        | <a id="query-list2" class="query-sample" href="#list2">list (มาตรา)</a>
+        | <a id="query-listPanelists" class="query-sample" href="#listPanelists">listPanelists</a>
+        | <a id="query-log" class="query-sample" href="#log">log (dev)</a>
       ]
     </p>
     <textarea id="query-editor"></textarea>
