--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <!-- Data download need prefetch as all JSON size sum will exceeded 10mb -->
 <link rel="prefetch" href="./data/chapter-01.json?v=0.2.1" />
+<link rel="prefetch" href="./data/chapter-13.json?v=0.2.1" />
+<link rel="prefetch" href="./data/chapter-14.json?v=0.2.1" />
+<link rel="prefetch" href="./data/chapter-15.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-16.json?v=0.2.1" />
 <link rel="prefetch" href="./data/transitory-provisions.json?v=0.2.1" />
 <link rel="prefetch" href="./data/constitution.json?v=0.2.1" />
