filters() depreciated / add multiFilter() function / add chapter 12 json data / update readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!-- Data download need prefetch as all JSON size sum will exceeded 10mb -->
 <link rel="prefetch" href="./data/chapter-01.json?v=0.2.1" />
+<link rel="prefetch" href="./data/chapter-12.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-13.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-14.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-15.json?v=0.2.1" />
@@ -27,7 +28,7 @@
     <p>
       Data object functions - [
           <a id="query-filter" class="query-sample" href="#filter">filter</a> 
-        | <a id="query-filters" class="query-sample" href="#filters">filters</a> 
+        | <a id="query-multiFilter" class="query-sample" href="#multiFilter">multiFilter</a> 
         | <a id="query-filterOut" class="query-sample" href="#filterOut">filterOut</a> 
         | <a id="query-filterArray" class="query-sample" href="#filterArray">filterArray</a> 
         | <a id="query-search" class="query-sample" href="#search">search</a> 
@@ -60,7 +61,7 @@
 </main>
 
 <script src="./array-log.js?v=0.2.1"></script>
-<script type="module" src="./app.js?v=0.2.1"></script>
+<script type="module" src="./app.js?v=0.2.3"></script>
 
 </body>
 </html>
