--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!-- Data download need prefetch as all JSON size sum will exceeded 10mb -->
 <link rel="prefetch" href="./data/chapter-01.json?v=0.2.1" />
+<link rel="prefetch" href="./data/chapter-11.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-12.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-13.json?v=0.2.1" />
 <link rel="prefetch" href="./data/chapter-14.json?v=0.2.1" />
@@ -61,7 +62,7 @@
 </main>
 
 <script src="./array-log.js?v=0.2.1"></script>
-<script type="module" src="./app.js?v=0.2.3"></script>
+<script type="module" src="./app.js?v=0.2.4"></script>
 
 </body>
 </html>
